Configured linter and linter ignores (some things are potentially temporary, but gives us a place to start). Only errors now are related to NODE_PATH and class methods being fat arrow statements (which needs to be added).

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,10 @@
     "jest": true
   },
   "rules": {
-    "react/jsx-filename-extension": [1, {"extensions": [".js"]}]
+    "react/jsx-filename-extension": [1, {"extensions": [".js"]}],
+    "linebreak-style": 0,
+    "function-paren-newline": 0,
+    "comma-dangle": 0,
+    "max-len": 0
   }
 }
