Configured linter to resolve imports in src to match NODE_PATH

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,5 +10,12 @@
     "function-paren-newline": 0,
     "comma-dangle": 0,
     "max-len": 0
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "paths": ["src"]
+      }
+    }
   }
 }
