Fixed last of import lint issues

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,7 @@
   "settings": {
     "import/resolver": {
       "node": {
-        "paths": ["src"]
+        "paths": ["src"] // Must match NODE_PATH
       }
     }
   }
