Resolved most linter errors from the Page changes, added lintfix script

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "build": "cross-env NODE_PATH=src react-scripts build",
     "test": "cross-env NODE_PATH=src react-scripts test --env=jsdom",
     "eject": "cross-env NODE_PATH=src react-scripts eject",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lintfix": "eslint . --fix"
   },
   "proxy": "http://172.22.77.4"
 }
