--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.3.1",
-    "semantic-ui-react": "^0.81.1"
+    "semantic-ui-react": "^0.81.1",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "cross-env": "^5.1.6",
