--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
     "react": "^16.4.0",
+    "react-app-rewire-stylelint": "^0.1.1",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
@@ -29,17 +30,23 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
+    "npm-run-all": "^4.1.3",
     "react-app-rewire-eslint": "^0.2.3",
     "react-app-rewired": "^1.5.2",
-    "react-test-renderer": "^16.4.0"
+    "react-test-renderer": "^16.4.0",
+    "stylelint": "^9.2.1",
+    "stylelint-config-standard": "^18.2.0"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=src react-app-rewired start",
     "build": "cross-env NODE_PATH=src react-app-rewired build",
     "test": "cross-env NODE_PATH=src react-app-rewired test --env=jsdom",
     "eject": "cross-env NODE_PATH=src react-scripts eject",
-    "lint": "eslint .",
-    "lintfix": "eslint . --fix"
+    "lint:js": "eslint .",
+    "lint:css": "stylelint \"src/**/*.css\"",
+    "lint": "run-s lint:**",
+    "lintfix:js": "eslint . --fix",
+    "lintfix:css": "stylelint \"src/**/*.css\" --fix"
   },
   "proxy": "http://172.22.77.4"
 }
