--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.4.0",
     "react-app-rewire-stylelint": "^0.1.1",
     "react-dom": "^16.4.0",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
