--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.2.6",
     "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
+    "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-app-rewire-stylelint": "^0.1.1",
     "react-dom": "^16.4.0",
