--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cross-env": "^5.1.6",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
@@ -35,7 +36,6 @@
     "npm-run-all": "^4.1.3",
     "react-app-rewire-eslint": "^0.2.3",
     "react-app-rewired": "^1.5.2",
-    "react-test-renderer": "^16.4.0",
     "stylelint": "^9.2.1",
     "stylelint-config-standard": "^18.2.0"
   },
@@ -49,6 +49,11 @@
     "lint": "run-s lint:**",
     "lintfix:js": "eslint . --fix",
     "lintfix:css": "stylelint \"src/**/*.css\" --fix"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   },
   "proxy": "http://172.22.77.4"
 }
