--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "npm-run-all": "^4.1.3",
     "react-app-rewire-eslint": "^0.2.3",
     "react-app-rewired": "^1.5.2",
+    "redux-mock-store": "^1.5.3",
     "stylelint": "^9.2.1",
     "stylelint-config-standard": "^18.2.0"
   },
@@ -54,7 +55,10 @@
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
-    "collectCoverageFrom": ["src/**/*.js", "!src/registerServiceWorker.js"]
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/registerServiceWorker.js"
+    ]
   },
   "proxy": "http://172.22.77.4"
 }
