--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.2.6",
     "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
+    "node-sass-chokidar": "^1.3.0",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-app-rewire-stylelint": "^0.1.1",
@@ -19,8 +20,8 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.81.1",
+    "semantic-ui-sass": "^2.2.11",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
@@ -41,15 +42,19 @@
     "stylelint-config-standard": "^18.2.0"
   },
   "scripts": {
-    "start": "cross-env NODE_PATH=src react-app-rewired start",
-    "build": "cross-env NODE_PATH=src react-app-rewired build",
+    "build:css": "node-sass-chokidar src/ -o src/",
+    "watch:css": "npm run build:css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start:js": "cross-env NODE_PATH=src react-app-rewired start",
+    "build:js": "cross-env NODE_PATH=src react-app-rewired build",
+    "start": "run-p watch:css start:js",
+    "build": "run-s build:css build:js",
     "test": "cross-env NODE_PATH=src react-app-rewired test --env=jsdom",
     "eject": "cross-env NODE_PATH=src react-scripts eject",
     "lint:js": "eslint .",
-    "lint:css": "stylelint \"src/**/*.css\"",
+    "lint:scss": "stylelint \"src/**/*.scss\"",
     "lint": "run-s lint:**",
     "lintfix:js": "eslint . --fix",
-    "lintfix:css": "stylelint \"src/**/*.css\" --fix"
+    "lintfix:scss": "stylelint \"src/**/*.scss\" --fix"
   },
   "jest": {
     "snapshotSerializers": [
