--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
+    "fetch-mock": "^6.4.4",
     "npm-run-all": "^4.1.3",
     "react-app-rewire-eslint": "^0.2.3",
     "react-app-rewired": "^1.5.2",
