--- a/package.json
+++ b/package.json
@@ -39,16 +39,13 @@
     "react-app-rewire-eslint": "^0.2.3",
     "react-app-rewired": "^1.5.2",
     "redux-mock-store": "^1.5.3",
+    "sass-loader": "^7.0.3",
     "stylelint": "^9.2.1",
     "stylelint-config-standard": "^18.2.0"
   },
   "scripts": {
-    "build:css": "node-sass-chokidar src/ -o src/",
-    "watch:css": "npm run build:css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "start:js": "cross-env NODE_PATH=src react-app-rewired start",
-    "build:js": "cross-env NODE_PATH=src react-app-rewired build",
-    "start": "run-p watch:css start:js",
-    "build": "run-s build:css build:js",
+    "start": "cross-env NODE_PATH=src react-app-rewired start",
+    "build": "cross-env NODE_PATH=src react-app-rewired build",
     "test": "cross-env NODE_PATH=src react-app-rewired test --env=jsdom",
     "eject": "cross-env NODE_PATH=src react-scripts eject",
     "lint:js": "eslint .",
