--- a/package.json
+++ b/package.json
@@ -60,6 +60,14 @@
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/registerServiceWorker.js"
-    ]
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    }
   }
 }
