--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-flexbox-grid": "^2.1.2",
     "react-html-parser": "^2.0.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
