--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-flexbox-grid": "^2.1.2",
+    "react-hot-loader": "^4.3.3",
     "react-html-parser": "^2.0.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
