Make hex codes all uppercase. This is literally the convention for every tool under the sun apparently (sketch output CSS, IDE integration, native desktop color tools all output uppercase hex codes). Chaning convention for ease of integration.

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
     "function-paren-newline": 0,
     "func-names": [1, "as-needed"],
     "comma-dangle": 0,
-    "max-len": 0
+    "max-len": 0,
+    "eol-last": 0
   },
   "overrides": [
     // Containers are not consumable components. Redux attaches many props from the store via mapStateToProps in
