--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.3.2",
     "semantic-ui-react": "^0.81.1",
-    "semantic-ui-sass": "^2.2.11",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
