--- a/server/package.json
+++ b/server/package.json
@@ -3,15 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "^4.16.3",
+    "express-delay": "^0.2.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "nodemon": "^1.17.5",
     "serve-favicon": "~2.4.5"
   }
 }
